Job Detail View Improvements: Configurable max output size, and lock job final output viewer to 80% window height with overflow scroll.  Fixes #125.

--- a/htdocs/css/style.css
+++ b/htdocs/css/style.css
@@ -1802,9 +1802,7 @@ body.dark .pxc_tt_content {
 	position: relative;
 	overflow-x: hidden;
 	overflow-y: scroll;
-}
-#d_live_job_log.active {
-	height: 80vh;
+	max-height: 80vh;
 }
 
 #d_live_job_log > p {
